--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ install:
   - npm install
 script:
   - npm run build
+
+# deploy:
+#   provider: pages
+#   skip-cleanup: true
+#   gitub-token: $GITHUB_TOKEN
+#   keep-history: true
